fix tree lines z-index

--- a/frontend/src/treex/components/treex/treex.component.scss
+++ b/frontend/src/treex/components/treex/treex.component.scss
@@ -58,16 +58,18 @@ mat-icon.folder {
     //    width: 100%;
 }
 
+.leaf {
+    opacity: 0.5 !important;
+}
+
 .mat-list-item {
     width: auto !important;
-    opacity: 0.7 !important;
 
     &:hover {
         opacity: 1 !important;
 
         .line {
             opacity: 1 !important;
-            border: red 1px solid !important;
         }
 
         .items_count {
@@ -125,8 +127,3 @@ mat-icon.folder {
 .flex-container {
     flex: 1;
 }
-
-// .mat-list-item .line {
-//     border: red 1px solid !important;
-//     display: block;
-// }
